--- a/pfolio-master/index.html
+++ b/pfolio-master/index.html
@@ -125,7 +125,7 @@
             </p>
 
             <div class="hero-banner">
-              <img src="./assets/images/hero-banner.jpg" width="800" height="800" alt="kane williams" class="w-100">
+              <img src="C:\Users\User-12\Desktop\MAFTUNA\qiz rasmi.jpg" width="800" height="800" alt="kane williams" class="w-100">
             </div>
 
             <p class="section-text">
