--- a/vcard-personal-portfolio-master/index.html
+++ b/vcard-personal-portfolio-master/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>Maftuna Portfolio</title>
 
   <!--
     - favicon
@@ -42,11 +42,12 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="C:\Users\User-12\Desktop\MAFTUNA\qiz rasmi.jpg" alt="Richard hanrick" width="80">
+          <img src="assets\images\qiz rasmi.jpg" alt="Richard hanrick" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Maftuna Madaminova</h1>
+          <h1 class="name" title="Richard hanrick">Maftuna</h1>
+          <h1 class="name" title="Richard hanrick">Madaminova</h1>
 
           <p class="title">Web developer</p>
         </div>
@@ -177,18 +178,7 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Blog</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
-          </li>
-
+          
         </ul>
 
       </nav>
